Remove yourdomain.com

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@ var onepress_js_settings = {"onepress_disable_animation":"","onepress_disable_st
 				<a href="#0" id="nav-toggle">Menu<span></span></a>
 				<nav id="site-navigation" class="main-navigation" role="navigation">
 					<ul class="onepress-menu">
-				   	   <li id="menu-item-12" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-12"><a href="http://yourdomain.com/#about">About</a></li>
-<li id="menu-item-15" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-15"><a href="http://yourdomain.com/#products">Products</a></li>
-<li id="menu-item-13" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-13"><a href="http://yourdomain.com/#process">Process</a></li>
-<li id="menu-item-14" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-14"><a href="http://yourdomain.com/#contact">Contact</a></li>
+				   	   <li id="menu-item-12" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-12"><a href="http://www.appliedatech.com/#about">About</a></li>
+<li id="menu-item-15" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-15"><a href="http://www.appliedatech.com/#products">Products</a></li>
+<li id="menu-item-13" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-13"><a href="http://www.appliedatech.com/#process">Process</a></li>
+<li id="menu-item-14" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-14"><a href="http://www.appliedatech.com/#contact">Contact</a></li>
 				    </ul>
 				</nav><!-- #site-navigation -->
 
